(Provisional) fix for the header overflow issue.

--- a/app/assets/stylesheets/_header.css.scss
+++ b/app/assets/stylesheets/_header.css.scss
@@ -221,3 +221,8 @@
     }
   }
 }
+
+/* Fix for the header overflow issue. */
+.top-bar-section .has-form {
+  padding: 0 20px;
+}
